packages/components/src/theme/navbar.scss
/* ... */
@media (min-width: 992px) {
    .navbar-left-menu .dropdown-menu {
        width: 925px;
        left: -156px;
    }
}

@media (min-width: 1200px) {
    .navbar-left-menu .dropdown-menu {
        width: 1082px;
        left: -136px;
    }
}

@media (min-width: 1418px) {
    .navbar-left-menu .dropdown-menu {
        width: 1320px;
        left: -162px;
    }
}

@media (max-width: 767px) { // $screen-xs-max
    .navbar-left-menu .product-menu-button {
        max-width: 180px;
    }

    .navbar-left {
        padding: 0 0 0 25px;

        .navbar-item {
            margin-left: 15px;
        }
    }

    .navbar-right {
        padding: 0 10px 0 0;

        .navbar-item {
            margin-right: 15px;
        }
    }
}

.product-menu-content {
    /* Works on Firefox */
    * {
        scrollbar-width: thin;
        scrollbar-color: $light-gray $white;
    }

    /* Works on Chrome, Edge, and Safari */
    *::-webkit-scrollbar {
        width: 12px;
    }

    *::-webkit-scrollbar-track {
        background-color: $white;
    }

    *::-webkit-scrollbar-thumb {
        background-color: $light-gray;
        border-radius: 20px;
        border: 3px solid $white;
    }

  .sections-content {
      display: inline;
  }

  .col-folders {
      width: 25%;
      background-color: $gray-shadow;
      border-radius: 4px 0 0 4px;
      padding-left: 8px;

      li:hover {
          background-color: $gray-lighter;
          border-radius: 4px 0 0 4px;
      }

      li.active {
          background-color: $white;
          border-radius: 4px 0 0 4px;

          &:focus, &:hover {
              background-color: $white;
          }

          a {
              color: $text-color;

              &:focus, &:hover {
                  background-color: $white;
                  color: $text-color;
                  cursor: default;
              }
          }
      }

      li.menu-section-header {
          font-weight: 500;
          padding: 5px 8px 4px 8px;
          min-height: 33px;
      }

      li.menu-section-item {
          padding: 8px;
      }

      li hr {
          margin: 4px 8px;
      }
  }
  .col-product-section {
      li {
          padding: 3px 8px;

          a {
              color: $text-color;
          }
      }
  }

  &.with-col-folders {
      .col-product-section {
          width: 15%;
      }
      &.with-section-count-4 .col-product-section {
          width: 18%;
      }
      &.with-section-count-3 .col-product-section {
          width: 25%;
      }
  }
  &:not(.with-col-folders) {
      padding-left: 8px;

      .col-product-section {
          width: 20%;
      }
      &.with-section-count-4 .col-product-section {
          width: 25%;
      }
      &.with-section-count-3 .col-product-section {
          width: 33%;
      }
  }

  .col-product-section:last-child {
      padding-right: 8px;
  }

  .menu-section {
    vertical-align: top;
    display: inline-block;
    word-break: break-word;
    padding-bottom: 16px;
    height: 100%;
    overflow-x: hidden;
    overflow-y: scroll;

    .menu-section-header {
      font-family: FontAwesome, $font-family-sans-serif;
      color: $brand-primary;
      margin-top: 16px;
      white-space: nowrap;

      a {
        color: $brand-primary;
        cursor: pointer;
      }
    }

    &.menu-loading {
      padding: 24px 16px;
    }

    ul {
      display: inline-block;
      width: 100%;
      vertical-align: top;
      list-style-type: none;
      margin: 0;
      padding: 0;

      li.clickable-item:focus, li.clickable-item:hover {
          background-color: $gray-lighter;
      }

      li a {
          display: block;
          padding: 0 4px;

          &:focus, &:hover {
              color: $link-hover-color;
              text-decoration: none;
              cursor: pointer;
          }
      }
    }

    hr {
      margin: 4px 0;
      border-top-color: $brand-primary;
      height: 1px;
      background-color: $light-gray;
      border: none;
    }

    .menu-folder-body {
        padding-right: 0;
    }

    .menu-folder-icons {
        display: none;
        padding: 0 10px 0 0;
        text-align: right;

        a {
            display: inline-block;
            padding: 0 10px 0 0;
        }

        i {
            color: $brand-primary;

            &:hover {
                color: $link-hover-color;
                cursor: pointer;
            }
        }
    }

    .menu-section-header:hover .menu-folder-icons,
    .menu-section-item:hover .menu-folder-icons {
        display: inline-block;
    }
  }
}

.empty-section {
  font-style: italic;
  color: $light-gray;
}

.empty-section-link {
  a {
    color: $brand-primary !important;
  }
}

.navbar {
  .container {
    padding: 0;
  }

  .navbar-left {
    // Triangle pointing menu to header nav element
    .navbar-connector {
      position: absolute;
      top: -10px;
      left: 80px;
      width: 0;
      height: 0;
      border-style: solid;
      border-width: 0 10px 10px 10px;
      border-color: transparent transparent #ffffff transparent;
    }
  }

  .navbar-right {
    // Triangle pointing menu to header nav element
    .navbar-connector {
      position: absolute;
      right: 18px;
      top: -10px;
      width: 0;
      height: 0;
      border-style: solid;
      border-width: 0 10px 10px 10px;
      border-color: transparent transparent #ffffff transparent;
    }

    .open .dropdown-menu {
      top: 125%;
    }
  }
}

@media (min-width: 992px) {
    .navbar .navbar-left .navbar-connector {
        left: 175px;
    }
}
@media (min-width: 1200px) {
    .navbar .navbar-left .navbar-connector {
        left: 155px;
    }
}

@media (min-width: 1418px) {
    .navbar .navbar-left .navbar-connector {
        left: 180px;
    }
}
/* ... */

